plugins {
    id 'org.springframework.boot' version '3.2.1'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'io.faroxy'
version = '1.0.0'
sourceCompatibility = '17'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

application {
    mainClass = 'io.faroxy.FaroxyServerApplication'
}

repositories {
    mavenCentral()
}

ext {
    javaFxVersion = "17"
}

javafx {
    version = "${javaFxVersion}"
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics']
}

dependencies {
    implementation 'org.slf4j:slf4j-api'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.controlsfx:controlsfx:11.1.2'
    implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
    implementation 'jakarta.ws.rs:jakarta.ws.rs-api:3.1.0'
    implementation "org.openjfx:javafx-base:${javaFxVersion}:mac-aarch64"
    implementation "org.openjfx:javafx-controls:${javaFxVersion}:mac-aarch64"
    implementation "org.openjfx:javafx-graphics:${javaFxVersion}:mac-aarch64"
    implementation "org.openjfx:javafx-fxml:${javaFxVersion}:mac-aarch64"
    runtimeOnly 'com.h2database:h2'
    
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
    
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.awaitility:awaitility:4.2.0'
    testImplementation 'org.assertj:assertj-core:3.24.2'
    testImplementation 'org.mockito:mockito-core:5.8.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.8.0'
}

test {
    useJUnitPlatform()
    jvmArgs = [
        '--add-opens=java.base/java.lang=ALL-UNNAMED',
        '--add-opens=java.base/java.util=ALL-UNNAMED'
    ]
}

run {
    systemProperty "java.awt.headless", "false"
    systemProperty "prism.verbose", "true"
    systemProperty "prism.order", "sw"
    systemProperty "prism.text", "t2k"
    jvmArgs = [
        '--add-opens=java.base/java.lang=ALL-UNNAMED',
        '--add-opens=java.base/java.nio=ALL-UNNAMED',
        '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
        '--add-opens=java.base/java.io=ALL-UNNAMED',
        '--add-modules=javafx.controls,javafx.fxml,javafx.graphics',
        '--add-exports=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
        '--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
        '--module-path=${project.classpath}'
    ]
}
